--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ header {
 .header__down_logo {
     font-size: 30px;
     font-weight: normal;
-    -webkit-animation:colorchange 20s infinite alternate;
 }
 .header__down_menu {
     display: flex;
@@ -72,6 +71,59 @@ header {
 .header__down_link:last-child {
     padding-right: 0;
 }
+
+
+/*TITLE STYLE*/
+
+.market_title {
+    width: 100%;
+    background: #8fffff;
+    text-align: center;
+    box-shadow: inset 0 0 6px black;
+}
+.market_title_h1 {
+    padding: 30px;
+    margin: 0;
+    -webkit-animation:colorchange 20s infinite alternate;
+}
+
+
+/*MAIN PAGE STYLE*/
+
+.main {
+    width: 100%;
+    background: url(img/background.png);
+}
+main {
+    display: flex;
+    flex-wrap: wrap;
+    color: white;
+    max-width: 1000px;
+    margin: auto;
+}
+.main__content {
+    width: 670px;
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    margin: 30px 30px 30px 0;
+    background: white;
+}
+.main__sidebar {
+    width: 300px;
+    box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    height: 500px;
+    margin: 30px 0;
+    background: white;
+}
+
+
+
+
+
+
+
+
 
 
 
